--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,67 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --blackColor: #242121;
+  --whiteColor: white;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
+.boxVisibleOff {
+  display: none;
+  transition: all 0.3s ease-out;
+}
+
+.boxVisibleOn {
+  display: block;
+  transition: all 0.8s ease-in;
+}
+
+.dark-background {
+  background-color: var(--blackColor) !important;
+  color: var(--whiteColor) !important;
+  transition: all 0.3s ease-in;
+}
+
+.white-background {
+  background-color: var(--whiteColor) !important;
+  color: var(--blackColor) !important;
+  transition: all 0.3s ease-out;
+}
+
+.main-container {
+  max-width: 100vw;
+  min-height: 100vh;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+.item-partitioner-vertical {
+  width: 0;
+  height: 95%;
+
+  margin: 0 5px;
+  border: 1px solid rgba(173, 173, 173, 0.5);
+}
+
+.item-partitioner-horizontal {
+  width: 95%;
+  height: 0;
+
+  margin: 5px 0;
+  border: 1px solid black;
 }
