--- a/src/components/Section/Styles/Index.css
+++ b/src/components/Section/Styles/Index.css
@@ -53,7 +53,9 @@
 
 .side-navigator-action {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
     
     position: relative;
     bottom: -50%;
