--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,17 @@ body {
   margin: 5px 0;
   border: 1px solid black;
 }
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / 90%);
+}
+
+.text-active-link {
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.text-in-active-link {
+  cursor: default;
+}
